--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,14 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="theme-color" content="#d1c0e2" />
+		<meta name="theme-color" content="#533573" />
+		<title>NostrViewstr</title>
+		<meta name="description" content="home" />
+		<meta prefix="og: https://ogp.me/ns#" />
+		<meta property="og:title" content="NostrViewstr" />
+		<meta property="og:description" content="home" />
+		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="my-custom2">
