--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<title>NostrViewstr</title>
 
 		<meta prefix="og: https://ogp.me/ns#" />
-		<meta property="og:title" content="NostrViewstr" />
+		<meta property="og:title" content="NostrViewstr（のすとびうあ）" />
 
 		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
 
