--- a/src/app.html
+++ b/src/app.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="theme-color" content="#533573" />
-		<title>NostrViewstr</title>
+		<title>NostViewstr</title>
 
 		<meta prefix="og: https://ogp.me/ns#" />
-		<meta property="og:title" content="NostrViewstr（のすとびうあ）" />
+		<meta property="og:title" content="NostViewstr（のすとびうあ）" />
 
 		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
 
