--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,11 @@
 		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
 
 		%sveltekit.head%
+		<script
+			defer
+			data-domain="nostviewstr.vercel.app"
+			src="http://localhost:8000/js/script.js"
+		></script>
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="my-custom2">
 		<div style="display: contents">%sveltekit.body%</div>
