--- a/src/app.html
+++ b/src/app.html
@@ -13,11 +13,29 @@
 		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
 
 		%sveltekit.head%
+
+		<!-- Google tag (gtag.js) -->
+
 		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-Y4HDVYX0Z6"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+			gtag('config', 'G-Y4HDVYX0Z6', {
+				ad_storage: 'denied',
+				analytics_storage: 'denied'
+			});
+		</script>
+		<!-- <script
 			defer
 			data-domain="nostviewstr.vercel.app"
 			src="http://localhost:8000/js/script.js"
-		></script>
+		></script> -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="my-custom2">
 		<div style="display: contents">%sveltekit.body%</div>
