--- a/src/app.html
+++ b/src/app.html
@@ -14,9 +14,14 @@
 
 		%sveltekit.head%
 
-		<!-- Google tag (gtag.js) -->
-
 		<script
+			data-goatcounter="https://mono.goatcounter.com/count"
+			async
+			src="//gc.zgo.at/count.js"
+		></script>
+
+		<!-- Google tag (gtag.js) -->
+		<!-- <script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=G-Y4HDVYX0Z6"
 		></script>
@@ -30,7 +35,7 @@
 				ad_storage: 'denied',
 				analytics_storage: 'denied'
 			});
-		</script>
+		</script> -->
 		<!-- <script
 			defer
 			data-domain="nostviewstr.vercel.app"
