--- a/src/app.html
+++ b/src/app.html
@@ -13,12 +13,12 @@
 		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
 
 		%sveltekit.head%
-
+		<!-- 
 		<script
 			data-goatcounter="https://mono.goatcounter.com/count"
 			async
 			src="//gc.zgo.at/count.js"
-		></script>
+		></script> -->
 
 		<!-- Google tag (gtag.js) -->
 		<!-- <script
