--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,10 @@
 		<meta property="og:title" content="NostViewstr（のすとびうあ）" />
 
 		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
-
+		<meta
+			name="google-site-verification"
+			content="HWxV5BReP7P0s1OwtbD_e0NGQTV4d2SlCDLFTCfRe-c"
+		/>
 		%sveltekit.head%
 		<!-- 
 		<script
