--- a/src/app.html
+++ b/src/app.html
@@ -1,51 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="theme-color" content="#533573" />
-		<title>NostViewstr</title>
 
-		<meta prefix="og: https://ogp.me/ns#" />
-		<meta property="og:title" content="NostViewstr（のすとびうあ）" />
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width" />
+	<meta name="theme-color" content="#533573" />
+	<title>NostViewstr</title>
 
-		<meta property="og:image" content="%sveltekit.assets%/ogp.png" />
-		<meta
-			name="google-site-verification"
-			content="HWxV5BReP7P0s1OwtbD_e0NGQTV4d2SlCDLFTCfRe-c"
-		/>
-		%sveltekit.head%
-		<!-- 
-		<script
-			data-goatcounter="https://mono.goatcounter.com/count"
-			async
-			src="//gc.zgo.at/count.js"
-		></script> -->
+	<meta prefix="og: https://ogp.me/ns#" />
+	<meta property="og:title" content="NostViewstr（のすとびうあ）" />
 
-		<!-- Google tag (gtag.js) -->
-		<!-- <script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-Y4HDVYX0Z6"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-			gtag('config', 'G-Y4HDVYX0Z6', {
-				ad_storage: 'denied',
-				analytics_storage: 'denied'
-			});
-		</script> -->
-		<!-- <script
-			defer
-			data-domain="nostviewstr.vercel.app"
-			src="http://localhost:8000/js/script.js"
-		></script> -->
-	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="my-custom2">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+	<!-- <meta property="og:image" content="%sveltekit.assets%/ogp.png" /> -->
+	<meta property="og:image" content="https://nostviewstr.vercel.app/ogp.png" />
+	<meta name="google-site-verification" content="HWxV5BReP7P0s1OwtbD_e0NGQTV4d2SlCDLFTCfRe-c" />
+	%sveltekit.head%
+
+</head>
+
+<body data-sveltekit-preload-data="hover" data-theme="my-custom2">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
