--- a/src/app.html
+++ b/src/app.html
@@ -12,8 +12,10 @@
 </head>
 
 <body data-sveltekit-preload-data="hover" data-theme="my-custom2">
+
 	<div style="display: contents">%sveltekit.body%</div>
 	<script src="https://www.unpkg.com/nostr-login@latest/dist/unpkg.js"></script>
+	<!-- <script src="https://unpkg.com/window.nostr.js/dist/window.nostr.js"></script> -->
 </body>
 
 </html>
