--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,8 @@
 	<div style="display: contents">%sveltekit.body%</div>
 	<script src="https://www.unpkg.com/nostr-login@latest/dist/unpkg.js"></script>
 	<!-- <script src="https://unpkg.com/window.nostr.js/dist/window.nostr.js"></script> -->
+
+	<script data-goatcounter="https://mono.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
 </html>
