--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 <body data-sveltekit-preload-data="hover" data-theme="my-custom2">
 
 	<div style="display: contents">%sveltekit.body%</div>
-	<script src="https://www.unpkg.com/nostr-login@latest/dist/unpkg.js"></script>
+	<script src="https://www.unpkg.com/nostr-login@latest/dist/unpkg.js" data-no-banner="true"></script>
 	<!-- <script src="https://unpkg.com/window.nostr.js/dist/window.nostr.js"></script> -->
 
 	<script data-goatcounter="https://mono.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
