--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,8 @@
 	<!-- <script src="https://unpkg.com/window.nostr.js/dist/window.nostr.js"></script> -->
 
 	<script data-goatcounter="https://mono.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/nostr-zap@latest"></script>
 </body>
+
 
 </html>
